--- a/Swift Documentation/2.Language Guide/18.Concurrency.md
+++ b/Swift Documentation/2.Language Guide/18.Concurrency.md
@@ -264,7 +264,71 @@ for try await line in handle.bytes.lines {
 
 ## 비동기 함수 병렬로 호출 (Calling Asynchronous Functions in Parallel)
 
+`await` 을 사용하여 비동기 함수를 호출하면 한번에 코드의 한 부분만 실행됩니다.
 
+비동기 코드가 실행되는 동안 호출자는 다음 코드 줄을 실행하기 전에 해당 코드가 완료될 때까지 기다립니다.
+
+예를 들어 갤러리에서 처음 세 장의 사진을 가져오려면 다음과 같이 `downloadPhoto(named:)` 함수에 대한 세 번의 호출을 기다릴 수 있습니다.
+
+~~~ swift
+let firstPhoto = await downloadPhoto(named: photoNames[0])
+let secondPhoto = await downloadPhoto(named: photoNames[1])
+let thirdPhoto = await downloadPhoto(named: photoNames[2])
+
+let photos = [firstPhoto, secondPhoto, thirdPhoto]
+show(photos)
+~~~
+
+이 접근 방식에는 중요한 단점이 있습니다.
+
+다운로드가 비동기이고 진행되는 동안 다른 작업을 수행할 수 있지만 `downloadPhoto(named:)` 에 대한 호출은 한 번에 하나만 실행됩니다.
+
+각 사진은 다음 사진이 다운로드를 시작하기 전에 완료됩니다.
+
+그러나 이런 작업을 기다릴 필요가 없습니다.
+
+각 사진은 독립적으로 또는 동시에 다운로드 할 수 있습니다.
+
+#
+
+비동기 함수를 호출하고 주변의 코드와 병렬로 실행하려면 상수를 정의할 때 `let` 앞에 `async` 를 작성하고 상수를 사용할 때마다 `await` 을 작성합니다.
+
+~~~ swift
+async let firstPhoto = downloadPhoto(named: photoNames[0])
+async let secondPhoto = downloadPhoto(named: photoNames[1])
+async let thirdPhoto = downloadPhoto(named: photoNames[2])
+
+let photos = await [firstPhoto, secondPhoto, thirdPhoto]
+show(photos)
+~~~
+
+이 예제에서 `downloadPhoto(named:)` 를 호출하는 세가지는 모두 이전 호출이 완료될 때까지 기다리지 않고 시작합니다.
+
+사용 가능한 시스템 리소스가 충분하다면 동시에 실행될 수 있습니다.
+
+코드가 함수의 결과를 기다리기 위해 일시 중단되지 않기 때문에 이러한 함수 호출 중 어느 것도 `await` 으로 표시되지 않습니다.
+
+대신 `photos` 가 정의된 라인까지 실행이 계속됩니다.
+
+이 지점에서 프로그램은 이러한 비동기 호출의 결과가 필요로 하므로 세 장의 사진이 모두 다운로드 될 때까지 실행을 일시 중단하기 위해 `await` 을 작성합니다.
+
+#
+
+다음은 이 두가지 접근 방식의 차이점에 대해 생각할 수 있는 방법입니다.
+
+- 다음 줄의 코드가 해당 함수의 결과에 따라 달라지면 `await` 을 사용하여 비동기 함수를 호출합니다. 이렇게 하면 순차적으로 실행되는 작업을 생성합니다.
+
+- 나중에 코드에서 결과가 필요하지 않을 때 `async-let` 을 사용하여 비동기 함수를 호출합니다. 이렇게 하면 병렬로 수행할 수 있는 작업이 생성됩니다.
+
+- `await` 과 `async-let` 은 모두 일시 중단되는 동안 다른 코드를 실행할 수 있도록 합니다.
+
+- 두 경우 모두 비동기 함수가 반환될 때까지 필요한 경우 실행이 일시 중단됨을 나타내기 위해 가능한 일시 중단 지점을 `await` 으로 표시합니다.
+
+동일한 코드에서 이 두 가지 접근 방식을 혼합해서 사용할 수도 있습니다.
+
+<br>
+
+## 작업과 작업 그룹 (Tasks and Task Groups)
 
 
 
