--- a/Swift Documentation/2.Language Guide/18.Concurrency.md
+++ b/Swift Documentation/2.Language Guide/18.Concurrency.md
@@ -330,7 +330,101 @@ show(photos)
 
 ## 작업과 작업 그룹 (Tasks and Task Groups)
 
+작업은 프로그램의 일부로 비동기적으로 실행할 수 있는 작업 단위입니다.
 
+모든 비동기 코드는 어떠한 작업의 일부로 실행됩니다.
+
+작업 자체는 한번에 하나의 작업만 수행하지만 여러 작업을 생성하면 Swift 는 동시에 수행하기 위해 작업을 스케쥴링 할 수 있습니다.
+
+#
+
+이전 섹션에서 설명한 `async-let` 구문은 암시적으로 하위 작업을 생성합니다.
+
+이 구문은 프로그램에서 실행해야 할 작업을 이미 알고 있는 경우에 효과적으로 동작합니다.
+
+작업 그룹 ([TaskGroup]() 의 인스턴스) 을 생성하고 해당 그룹에 하위 작업을 명시적으로 추가할 수도 있는데 이를 통해 우선순위와 취소를 더 잘 제어할 수 있으며 동적으로 작업의 수를 생성할 수 있습니다.
+
+#
+
+작업은 계층 구조로 정렬됩니다.
+
+주어진 작업 그룹의 각 작업에는 동일한 상위 작업이 있으며 각 작업에는 하위 작업이 있을 수도 있습니다.
+
+작업과 작업 그룹 간의 명시적 관계 때문에 이 접근 방식을 구조적 동시성이라고 합니다.
+
+명시적 부모 - 자식 관계는 작업간에 여러 이점이 있습니다.
+
+- 부모 작업에서 하위 작업이 완료될 때까지 기다릴 수 있습니다.
+
+- 하위 작업에 더 높은 우선순위를 설정하면 상위 작업의 우선순위가 자동으로 높아집니다.
+
+- 상위 작업이 취소되면 각 하위 작업들은 자동으로 취소됩니다.
+
+- 작업-로컬 값은 하위 작업에 효율적이고 자동으로 전파됩니다.
+
+#
+
+다음은 여러 사진을 다운로드하는 코드를 나타냅니다.
+
+~~~ swift
+await withTaskGroup(of: Data.self) { group in
+    let photoNames = await listPhotos(inGallery: "Summer Vacation")
+    for name in photoNames {
+        group.addTask {
+            return await downloadPhoto(named: name)
+        }
+    }
+
+    for await photo in group {
+        show(photo)
+    }
+}
+~~~
+
+위 코드는 새로운 작업 그룹을 생성하고 갤러리의 각 사진을 다운로드하기 위한 하위 작업을 생성합니다.
+
+Swift 는 조건이 허락하는 만큼 동시적으로 여러 작업을 수행합니다.
+
+하위 작업에서 사진 다운로드가 끝나자마자 해당 사진을 보여줍니다.
+
+하위 작업 완료에 대한 순서를 보장하지 않으므로 갤러리의 사진은 무작위로 보여질 수 있습니다.
+
+> Note    
+> 사진 다운로드 코드에서 에러가 발생할 수 있다면 `withThrowingTaskGroup(of:returning:body:)` 을 호출해야 합니다.
+
+#
+
+위 코드에서 각 사진은 다운로드되고 보여지므로 작업 그룹은 결과를 반환하지 않습니다.
+
+결과를 반환하는 작업 그룹의 경우 `withTaskGroup(of:returning:body:)` 에 전달하는 클로저에 결과를 누적하는 코드를 추가합니다.
+
+~~~ swift
+let photos = await withTaskGroup(of: Data.self) { group in
+    let photoNames = await listPhotos(inGallery: "Summer Vacation")
+    for name in photoNames {
+        group.addTask {
+            return await downloadPhoto(named: name)
+        }
+    }
+
+    var results: [Data] = []
+    for await photo in group {
+        results.append(photo)
+    }
+
+    return results
+}
+~~~
+
+이전 예제와 같이 이 예제는 각 사진을 다운로드하는 하위 작업을 생성합니다.
+
+이전 예제와 다르게 `for-await-in` 루프는 다음 하위 작업이 완료될 때까지 기다리고 해당 작업의 결과를 결과 배열에 추가한 다음에 모든 하위 작업이 완료될 때까지 기다립니다.
+
+마지막으로 작업 그룹은 다운로드한 사진의 배열을 전체 결과로 반환합니다.
+
+<br>
+
+### 작업 취소 (Task Cancellation)
 
 
 
