--- a/Swift Documentation/2.Language Guide/18.Concurrency.md
+++ b/Swift Documentation/2.Language Guide/18.Concurrency.md
@@ -426,6 +426,94 @@ let photos = await withTaskGroup(of: Data.self) { group in
 
 ### 작업 취소 (Task Cancellation)
 
+Swift 동시성은 협력 취소 모델을 사용합니다.
+
+각 작업은 실행중 적절한 지점에서 취소 여부를 확인하고 적절하게 취소에 응답합니다.
+
+작업의 종류에 따라 취소에 대한 응답은 다음 중 하나에 해당합니다.
+
+- `CancellationError` 와 같은 에러 발생
+
+- `nil` 또는 빈 컬렉션 반환
+
+- 부분적으로 완료된 작업 반환
+
+#
+
+사진이 크거나 네트워크가 느린 경우 사진을 다운로드하는데 오랜 시간이 걸릴 수 있습니다.
+
+사용자가 모든 작업이 완료될 때까지 기다리지 않고 사용자가 이 작업을 중지할 수 있도록 하려면 작업이 취소되었는지 확인하고 취소된 경우에 실행을 중지해야 합니다.
+
+작업이 취소되었는지 확인하는 방법은 두 가지가 있습니다.
+
+[Task.checkCancellation()]() 타입 메서드를 호출하거나 [Task.isCancelled]() 타입 프로퍼티를 읽어서 확인할 수 있습니다.
+
+`checkCancellation()` 을 호출하는 것은 작업이 취소되었으면 에러를 발생시킵니다.
+
+던지는 작업은 에러를 작업 외부로 전파하여 모든 작업의 일을 중지시킬 수 있습니다.
+
+이 방법은 구현과 이해가 간단하다는 장점이 있습니다.
+
+유연성을 높이려면 `isCancelled` 프로퍼티를 사용해서 네트워크 연결을 닫고 임시 파일을 지우는 것과 같은 작업 중지의 일부분으로 정리 작업을 수행하게 할 수 있습니다.
+
+~~~ swift
+let photos = await withTaskGroup(of: Optional<Data>.self) { group in
+    let photoNames = await listPhotos(inGallery: "Summer Vacation")
+    for name in photoNames {
+        let added = group.addTaskUnlessCancelled {
+            guard !Task.isCancelled else { return nil }
+            return await downloadPhoto(named: name)
+        }
+        guard added else { break }
+    }
+
+    var results: [Data] = []
+    for await photo in group {
+        if let photo { results.append(photo) }
+    }
+    return results
+}
+~~~
+
+위의 코드는 이전 버전과 몇가지 다른 점이 있습니다.
+
+- 각 작업은 취소 후에 새로운 작업이 시작되는 것을 방지하기 위해 [TaskGroup.addTaskUnlessCancelled(priority:operation:)]() 메서드를 사용해서 추가됩니다.
+
+- `TaskGroup.addTaskUnlessCancelled(priority:operation:)` 에 대한 각 호출 후에 코드는 하위 작업이 새로 추가되었음을 확인합니다. 그룹이 취소되면 `added` 의 값은 `false` 이고 코드는 추가 사진 다운로드를 중지합니다.
+
+- 각 작업은 사진을 다운로드 하기 전에 취소 여부를 판단합니다. 작업이 취소되면 `nil` 을 반환합니다.
+
+- 마지막으로 작업 그룹은 결과를 수집할 때 `nil` 값이면 건너뜁니다. `nil` 을 반환해서 취소를 처리한다는 것은 작업 그룹이 부분적인 결과를 반환할 수 있다는 의미입니다. 취소했을 때 이미 다운로드된 사진은 사진을 폐기하는 대신에 다운로드된 사진을 반환합니다.
+
+> Note    
+> 작업이 외부에서 취소되었는지 확인하려면 타입 프로퍼티 대신에 [Task.isCancelled]() 인스턴스 프로퍼티를 사용합니다.
+
+#
+
+즉시 취소에 대한 알림이 필요한 경우 [Task.withTaskCancellationHandler(operation:onCancel:)]() 메서드를 사용합니다.
+
+~~~ swift
+let task = await Task.withTaskCancellationHandler {
+    // ...
+} onCancel: {
+    print("Canceled!")
+}
+
+// ... some time later...
+task.cancel()  // Prints "Canceled!"
+~~~
+
+취소 처리 핸들러를 사용할 때 작업 취소는 여전히 협력적입니다.
+
+작업은 완료될 때까지 실행되거나 취소를 확인하고 일찍 중지됩니다.
+
+취소 처리 핸들러가 시작될 때 작업이 여전히 실행 중이므로 작업과 취소 처리 핸들러간의 상태 공유를 피해야 합니다.
+
+이는 경쟁 상황을 생성할 수 있습니다.
+
+<br>
+
+### 구조화되지 않은 동시성 (Unstructured Concurrency)
 
 
 
