--- a/Swift Documentation/2.Language Guide/18.Concurrency.md
+++ b/Swift Documentation/2.Language Guide/18.Concurrency.md
@@ -515,6 +515,31 @@ task.cancel()  // Prints "Canceled!"
 
 ### 구조화되지 않은 동시성 (Unstructured Concurrency)
 
+이전 섹션에서 설명한 동시성에 대한 구조화된 접근 방식 외에도 Swift 는 구조화되지 않은 동시성도 지원합니다.
+
+작업 그룹의 일부인 작업과 달리 구조화되지 않은 작업에는 상위 작업이 없습니다.
+
+프로그램에 필요한 방식으로 구조화되지 않은 작업을 관리할 수 있는 완전한 유연성이 있지만 정확성에 대한 완전한 책임도 있습니다.
+
+현재 `actor` 에서 실행되는 구조화되지 않은 작업을 생성하려면 [Task.init(priority:operation:)]() 초기화 구문을 호출해야 합니다.
+
+현재 `actor` 의 일부가 아닌 구조화되지 않은 작업 (더 구체적으로는 분리된 작업) 을 생성하려면 [Task.detached(priority:operation:)]() 클래스 메서드를 호출합니다.
+
+이러한 두 작업 모두 상호작용 할 수 있는 작업 (예: 결과를 기다리거나 취소하는 경우) 을 반환합니다.
+
+~~~ swift
+let newPhoto = // ... some photo data ...
+let handle = Task {
+    return await add(newPhoto, toGalleryNamed: "Spring Adventures")
+}
+let result = await handle.value
+~~~
+
+분리된 작업 관리에 대한 자세한 내용은 [Task]() 를 참조하세요.
+
+<br>
+
+## 액터 (Actors)
 
 
 
