--- a/Swift Documentation/2.Language Guide/18.Concurrency.md
+++ b/Swift Documentation/2.Language Guide/18.Concurrency.md
@@ -541,11 +541,161 @@ let result = await handle.value
 
 ## 액터 (Actors)
 
+프로그램을 동시성 조각으로 분리하기 위해 작업을 사용할 수 있습니다.
+
+작업은 서로 분리되어 있어 동시에 실행해도 안전하지만 때로는 작업 간에 일부 정보를 공유해야 할 수도 있습니다.
+
+액터를 사용하면 동시성 코드 간에 정보를 안전하게 공유할 수 있게 해줍니다.
+
+#
+
+클래스와 마찬가지로 액터는 참조 타입이므로 [클래스는 참조 타입 (Classes Are Reference Types)]() 에서 값 타입과 참조 타입을 비교하는 것은 액터와 클래스에 모두 적용됩니다.
+
+클래스와 다르게 액터는 한 번에 하나의 작업만 변경 가능한 상태에 접근할 수 있도록 허용하므로 여러 작업의 코드가 액터의 동일한 인스턴스와 상호작용하는 것이 안전합니다.
+
+예를 들어 다음은 온도를 기록하는 액터입니다.
+
+~~~ swift
+actor TemperatureLogger {
+    let label: String
+    var measurements: [Int]
+    private(set) var max: Int
 
 
+    init(label: String, measurement: Int) {
+        self.label = label
+        self.measurements = [measurement]
+        self.max = measurement
+    }
+}
+~~~
 
+`actor` 키워드를 사용하여 액터를 도입하고 중괄호로 정의합니다.
 
+`TemperatureLogger` 액터는 액터 외부의 다른 코드가 접근할 수 있는 프로퍼티가 있으며 액터 내부의 코드만 최대값을 업데이트 할 수 있게 `max` 프로퍼티를 제한합니다.
 
+#
+
+구조체와 클래스와 같은 초기화 구문으로 액터의 인스턴스를 생성합니다.
+
+액터의 프로퍼티 또는 메서드에 접근할 때 일시 중단 지점을 나타내기 위해 `await` 을 사용합니다.
+
+~~~ swift
+let logger = TemperatureLogger(label: "Outdoors", measurement: 25)
+print(await logger.max)
+// Prints "25"
+~~~
+
+이 예제에서 `logger.max` 에 접근하는 것은 일시 중단 지점으로 가능합니다.
+
+액터는 한 번에 하나의 작업만 변경 가능한 상태에 접근할 수 있도록 하용하므로 다른 작업의 코드가 이미 `logger` 와 상호 작용하고 있는 경우 이 코드는 프로퍼티 접근을 기다리는 동안 일시 중단됩니다.
+
+#
+
+반면 액터의 일부분인 코드는 액터의 프로퍼티에 접근할 때 `await` 을 작성하지 않습니다.
+
+예를 들어 다음은 새로운 온도로 `TemperatureLogger` 를 업데이트 하는 메서드 입니다.
+
+~~~ swift
+extension TemperatureLogger {
+    func update(with measurement: Int) {
+        measurements.append(measurement)
+        if measurement > max {
+            max = measurement
+        }
+    }
+}
+~~~
+
+`update(with:)` 메서드는 이미 액터에서 실행 중이므로 `max` 와 같은 프로퍼티에 대한 접근을 `await` 으로 표시하지 않습니다.
+
+또한 이메서드는 액터가 한 번에 하나의 작업만 변경 가능한 상태와 상호 작용하도록 허용하는 이유 중 하나를 보여줍니다.
+
+액터의 상태에 대한 일부 업데이트는 일시적으로 불변성을 깨뜨립니다.
+
+`TemperatureLogger` 액터는 온도 리스트와 최대 온도를 추적하고 새로운 측정값을 기록할 때 최대 온도를 업데이트 합니다.
+
+업데이트 도중에 새로운 측정값을 추가한 후 `max` 를 업데이트 하기 전에 온도 로거는 일시적으로 일치하지 않는 상태가 됩니다.
+
+여러 작업이 동일한 인스턴스에 동시에 상호 작용하는 것을 방지하면 다음 이벤트 시퀀스와 같은 문제를 방지할 수 있습니다.
+
+#
+
+1. 코드는 `update(with:)` 메서드를 호출합니다. 먼저 `measurements` 배열을 업데이트 합니다.
+
+2. 코드에서 `max` 를 업데이트 하기 전에 다른 코드에서 최대값과 온도 배열을 읽습니다.
+
+3. 코드는 `max` 를 변경하여 업데이트를 완료합니다.
+
+이러한 경우 다른 곳에서 실행 중인 코드는 데이터가 일시적으로 유호하지 않은 동안 `update(with:)` 호출 중간에 액터에 대한 접근이 중간에 껴들게 되어 잘못된 정보를 읽습니다.
+
+Swift `Actor` 는 한 번에 해당 상태에 대해 하나의 작업만 허용하고 해당 코드는 `await` 으로 정지 지점을 표시하는 위치에서만 중단될 수 있으므로 Swift `Actor` 를 사용하여 이 문제를 방지할 수 있습니다.
+
+`update(with:)` 는 일시 중단 지점을 포함하지 않으므로 다른 코드는 업데이트 중간에 데이터에 접근할 수 없습니다.
+
+#
+
+만약 액터 외부의 코드에서 구조체 또는 클래스의 프로퍼티에 접근한느 것과 같이 프로퍼티에 직접적으로 접근하면 컴파일 타임 에러가 발생합니다.
+
+~~~ swift
+print(logger.max)  // Error
+~~~
+
+`await` 작성 없이 `logger.max` 에 접근하는 것은 액터의 프로퍼티가 해당 액터의 분리된 로컬 상태의 일부분이기 때문에 실패합니다.
+
+이 프로퍼티에 접근하는 코드는 비동기 작업인 액터의 일부분으로 실행되어야하고 `await` 을 작성해야 합니다.
+
+Swift 는 액터에서 실행되는 코드만 해당 액터의 로컬 상태에 접근할 수 있도록 보장합니다.
+
+이 보장을 액터 분리 라고 합니다.
+
+#
+
+Swift 동시성 모델의 다음과 같은 측면들이 함께 작동하여 공유된 변경 가능 상태에 대해 파악하기 쉽게 만듭니다.
+
+- 중단 가능 지점 사이의 코드는 다른 비동기 코드로 인한 중단 가능성 없이 순차적으로 실행됩니다.
+
+- 액터의 로컬 상태와 상호작용하는 코드는 해당 액터에서만 실행됩니다.
+
+- 액터는 한번에 하나의 코드만 샐행합니다.
+
+이러한 보장으로 인해 `await` 을 포함하지 않고 액터 내부에 있는 코드는 프로그램의 다른 위치에서 일시적으로 유효하지 않은 상태의 관찰에 대한 리스크 없이 업데이트를 수행할 수 있습니다.
+
+예를 들어 아래 코드는 측정된 온도를 화씨에서 섭씨로 변환합니다.
+
+~~~ swift
+extension TemperatureLogger {
+    func convertFahrenheitToCelsius() {
+        measurements = measurements.map { measurement in
+            (measurement - 32) * 5 / 9
+        }
+    }
+}
+~~~
+
+위 코드는 측정된 배열을 한번에 하나씩 변환합니다.
+
+map 작업이 진행되는 동안 일부 온도는 화씨로 다른 온도는 섭씨로 표시됩니다.
+
+그러나 이 코드는 `await` 을 포함하지 않기 때문에 이 메서드에는 중단 지점이 없습니다.
+
+이 메서드가 수정하는 상태는 액터에 속하며 해당 코드가 액터에서 실행될 때를 제외하고는 코드를 읽거나 수정하지 못하도록 보호합니다.
+
+즉 온도의 단위 변환이 진행되는 동안 다른 코드가 부분적으로 변환된 온도를 읽을 수 없다는 것을 의미합니다.
+
+#
+
+잠재적 중단 지점을 생략하여 일시적으로 유효하지 않은 상태를 보호하는 액터에 코드를 작성하는 것외에도 해당 코드를 동기 메서드로 이동할 수 있습니다.
+
+위의 `convertFahrenheitToCelsius()` 메서드는 동기 메서드이므로 절대 잠재적 중단 지점이 포함되지 않음을 보장합니다.
+
+이 메서드는 데이터 모델을 일시적으로 불일치하게 만드는 코드를 캡슐화하고 작업이 완료되어 데이터 일관성을 복원하기 전까지 다른 코드를 실행할 수 없다는 것을 인식하기 쉽게 만듭니다.
+
+나중에 이 함수에 동시 코드를 추가하여 일시 중단 지점을 도입하면 버그가 발생하는 대신 컴파일 타임 에러가 발생합니다.
+
+<br>
+
+## 전송 가능 타입 (Sendable Types)
 
 
 
